# yast-bluetooth

./: README.md  yast2-bluetooth.spec.in
agents/: cfg_bluetooth.scr
bluetooth/: .cvsignore  RPMNAME
bluetooth/agents/: Makefile.am  bt_hcid.scr
bluetooth/doc/: Makefile.am
bluetooth/package/: yast2-bluetooth.changes
bluetooth/src/: Bluetooth.ycp  Makefile.am  bluetooth.ycp  bluetooth_proposal.ycp  complex.ycp  helps.ycp  wizards.ycp
doc/autodocs/: Makefile.am
package/: yast2-bluetooth.changes
src/: Bluetooth.ycp  Makefile.am  bluetooth.desktop  bluetooth_auto.ycp  bluetooth_proposal.ycp  complex.ycp  dialogs.ycp  helps.ycp  wizards.ycp
